Button Align Fixed-1

--- a/modules/weko-theme/weko_theme/static/css/weko_theme/styling.css
+++ b/modules/weko-theme/weko_theme/static/css/weko_theme/styling.css
@@ -231,6 +231,10 @@
   margin-right: 10px;
 }
 
+.ten-pixel-left-margin {
+  margin-left: 10px;
+}
+
 .ten-pixel-top-margin {
  margin-top: 10px;
 }
@@ -247,8 +251,18 @@
   margin-bottom: 10px;
 }
 
+.twentyfive-pixel-bottom-margin {
+  margin-bottom: 25px;
+}
+
 .twentyeight-pixel-right-margin {
   margin-right: 28px;
 }
 
-               
+.detail-lable {
+ text-align: center;
+}
+
+.gray-color-class {
+  border-color: #D3D3D3;
+}
